[gd_scene load_steps=2 format=3 uid="uid://bg4y0xmf13rf5"]

[ext_resource type="Script" uid="uid://kyet042n7hc0" path="res://addons/3d_player_controller/message.gd" id="1_nsi75"]

[node name="Message" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 58.0
script = ExtResource("1_nsi75")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SenderLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "Sender's Name"

[node name="ContentLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Message content."

[node name="HideTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 30.000000000000004
one_shot = true

[connection signal="timeout" from="HideTimer" to="." method="_on_hide_timer_timeout"]
